# Career-ops-autonomus

./: .env.example  .envrc  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  DATA_CONTRACT.md  KICKOFF.md  LEGAL_DISCLAIMER.md  Makefile  NEXT_STEPS.md  README.md  compass_artifact_wf-08594742-2800-4888-a3c1-512b10deab8d_text_markdown.md  flake.nix  package.json  pyproject.toml
.cursor/rules/: career-ops.mdc
.github/workflows/: ci.yml
agents/: __init__.py
agents/adapters/: __init__.py  ats_ashby.py  ats_generic.py  ats_glassdoor.py  ats_greenhouse.py  ats_indeed.py  ats_lever.py  ats_linkedin.py  ats_wellfound.py  ats_workday.py  base.py
agents/orchestrator/: __init__.py  auto_pass.py  autonomy.py  graph.py  state.py
agents/prompts/: __init__.py  scanner.md  scorer.md  tailor.md  verifier.md
agents/tests/: __init__.py  test_adapter_greenhouse.py  test_anomaly.py  test_autonomy.py  test_bridge.py  test_bridge_approvals.py  test_bridge_health.py  test_captcha.py  (+15 more)
audit/: .gitkeep
bridge/: __init__.py  __main__.py  approvals.py  dashboard.py  secrets_status.py  server.py
config/: portals.yml  profile.example.yml  profile.yml
cv/: .gitkeep  README.md  da.md  de.md  mle.md
dashboard/: go.mod  main.go
data/: .gitkeep  applications.xlsx  pipeline.xlsx
db/: .gitkeep  __init__.py  migrate.py  schema.sql
docs/: .gitkeep  AUTONOMY.md  CV_TRACKS.md  ENCRYPTION.md  GMAIL_SETUP.md  LINKEDIN_SESSION.md  SCHEDULING.md  SECRETS.md  WHATSAPP_SETUP.md
infra/: .gitkeep  com.career-ops.daily.plist  com.career-ops.healthcheck.plist  com.career-ops.weekly.plist  install-launchd.sh
jds/: .gitkeep
modes/: README.md  _shared.md  apply.md
output/: .gitkeep  run-tailor-1-cover.md  run-tailor-2-cover.md
reports/: .gitkeep
scripts/: doctor.mjs  migrate-applications-md.mjs  save-linkedin-session.mjs
templates/: states.yml
(+28 files in other folders)
